@@ -6,3 +6,6 @@ Added the following:
     - Added verbose option to connect, send, disconnect, and reset functions
     - Verifying syn ack response when connecting
     - Reset connection if disconnect fails
+
+Removed the following:
+    - connection.old.py file
